--- a/PopularityPrediction.ipynb
+++ b/PopularityPrediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ2Psoq+tztfAnZQ74Wayl",
+      "authorship_tag": "ABX9TyMF48DFCUV1/4Bm47OTBdWZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -660,13 +660,39 @@
       "source": [
         "# Instead of one-hot encoding, obtain every element and count how popular the genre is.\n",
         "# Concatenate and use column as a feature.\n",
-        "genre_count = everyGenre[\"Genre\"].explode().value_counts().reset_index(name='Genre Count')\n",
-        "genre_count.columns = ['Genre', 'Genre Count']  # Rearrange columns for clarity\n",
+        "# genre_count = music_df_copy[\"Genre\"].explode().value_counts().reset_index(name='Genre Count')\n",
+        "# genre_count.columns = ['Genre', 'Genre Count']  # Rearrange columns for clarity\n",
         "\n",
-        "genre_count"
+        "# genre_count"
       ],
       "metadata": {
         "id": "JBD7IhLQ3oNd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def extract_genres(genre_list):\n",
+        "    if pd.isna(genre_list):\n",
+        "        return []  # Return an empty list for missing values\n",
+        "    else:\n",
+        "        return [genre.strip() for genre in genre_list[1:-1].split(\", \")]  # Extract and strip genres\n",
+        "\n",
+        "everyGenre = music_df_copy[\"Genre\"].apply(extract_genres)\n",
+        "\n",
+        "# Count occurrences of each unique genre\n",
+        "item_counts = everyGenre.explode().value_counts().reset_index(name='Genre Count')\n",
+        "item_counts.columns = ['Genre', 'Genre Count']  # Set column names\n",
+        "\n",
+        "# Sort the DataFrame by count in descending order\n",
+        "genre_count = item_counts.sort_values(by='Genre Count', ascending=False)\n",
+        "\n",
+        "print(genre_count)"
+      ],
+      "metadata": {
+        "id": "hwZ_fmVphf0o"
       },
       "execution_count": null,
       "outputs": []
@@ -690,19 +716,19 @@
         "\n",
         "#   return item_counts\n",
         "\n",
-        "# everyGenre[\"Genre\"] = everyGenre[\"Genre\"].apply(lambda x: [i.strip() for i in x[1:-1].split(\", \")])\n",
+        "# everyGenre[\"Genre Name\"] = everyGenre[\"Genre\"].apply(lambda x: [i.strip() for i in x[1:-1].split(\", \")])\n",
         "# # Flatten all lists in the \"Genre\" column into a single list\n",
-        "# all_items = sum(everyGenre[\"Genre\"], [])\n",
+        "# all_items = sum(everyGenre[\"Genre Name\"], [])\n",
         "\n",
         "# # Count occurrences of each unique item\n",
         "# item_counts = count_unique_items(all_items)\n",
         "\n",
         "# # Convert the item counts into a DataFrame\n",
-        "# total_counts = pd.DataFrame.from_dict(item_counts, orient='index', columns=['Count'])\n",
+        "# total_counts = pd.DataFrame.from_dict(item_counts, orient='index', columns=['Genre Count'])\n",
         "\n",
         "# # Sort the DataFrame by count in descending order\n",
-        "# genre_total = total_counts.sort_values(by='Count', ascending=False)\n",
-        "# genre_total"
+        "# genre_count = total_counts.sort_values(by='Genre Count', ascending=False)\n",
+        "# genre_count"
       ],
       "metadata": {
         "id": "NEiV_dBlNfxJ"
@@ -785,7 +811,7 @@
         "music_df_copy = music_df_copy.dropna()"
       ],
       "metadata": {
-        "id": "ewXKhoySry0j"
+        "id": "kqLQMZLRXLtR"
       },
       "execution_count": null,
       "outputs": []
@@ -840,7 +866,7 @@
     {
       "cell_type": "code",
       "source": [
-        "tem_music_df_copy = music_df_copy.head(100)"
+        "temp_music_df_copy = music_df_copy.head(100)"
       ],
       "metadata": {
         "id": "_3mcrJsROMUP"
@@ -1202,7 +1228,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Conclusion: Based on the RMSE values, XGBoost with a depth of 2 achieved the best performance in predicting song popularity (RMSE: 8.0541) followed by Random Forest (RMSE: 10.52) and Decision Tree (RMSE: 10.97). This indicates that XGBoos is a more suitable model for this dataset."
+        "# Conclusion: Based on the RMSE values, XGBoost with a depth of 2 achieved the best performance in predicting song popularity (RMSE: 7.62) followed by Random Forest (RMSE: 11.52) and Decision Tree (RMSE: 10.97). This indicates that XGBoos is a more suitable model for this dataset."
       ],
       "metadata": {
         "id": "8KuWHk3GJuUx"
